Limiting CI/CD to pushes on main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,7 @@ permissions:
 on:
   workflow_dispatch:
   push:
-    branches:
-      - '*'
+    branches: ["main"]
     paths:
       - 'Containerfile'
       - 'docker-entrypoint.sh'
