--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - 'Containerfile'
       - 'docker-entrypoint.sh'
-      - '/databases/**'
+      - 'databases/**'
   
 env:
   REGISTRY: docker.io
